--- a/final-crud-app/package.json
+++ b/final-crud-app/package.json
@@ -10,10 +10,17 @@
     "lint": "eslint .",
     "preview": "vite preview"
   },
-  "homepage": "https://github.com/MalakiCarstens/AWD1000-Final-Project",
+  "homepage": "https://malakicarstens.github.io/AWD1000-Final-Project/",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^6.7.2",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
+    "@fortawesome/react-fontawesome": "^0.2.2",
+    "bootstrap": "^5.3.5",
     "gh-pages": "^6.3.0",
+    "lodash": "^4.17.21",
+    "nanoid": "^5.1.5",
     "react": "^19.0.0",
+    "react-bootstrap": "^2.10.9",
     "react-dom": "^19.0.0"
   },
   "devDependencies": {
